--- a/index.html
+++ b/index.html
@@ -71,12 +71,16 @@
                     <img src="img/calendar-icon.svg" alt="календарь">
                 </div>
                 <div class="dashboard__time-current">
-                    <div class="date">
-                        21 Марта 2021
+                    <div class="date" id="Date">
+
                     </div>
-                    <div class="time">
-                        18:46
-                    </div>
+                    <ul class="time">
+                        <li id="hours"></li>
+                        <li id="point">:</li>
+                        <li id="min"></li>
+                        <li id="point">:</li>
+                        <li id="sec"></li>
+                    </ul>
                 </div>
             </div>
         </aside>
